# test-rates

./: README.md  crontab.sample  pyproject.toml
rates/api/v1/: filters.py  serialaizers.py  urls.py  views.py
rates/currencies/: admin.py  apps.py  models.py
rates/currencies/management/commands/: get_currencies_from_cbr.py
rates/rates/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
